refactor: Move PVGeomechanicsAnalysis to geos-pv and GeomechanicsCalculator to geos-processing (#140)
* move GeomechnicsCalculator to geos-mesh

* move PVGeomechanicsAnalysis in geos-pv

* move GeomechanicsCalculator in the correct folder

* Remove PVPythonAlgorithmBase

* refactor computeElasticModulus functions

* refactor compute biot coefficient

* refactor computeCompressibilityCoefficient function

* refactor computeRealEffectiveStressRatio

* refactor computeSpecificGravity

* refactor computeTotalStresses

* refactor computBasicOutputs

* refactor computeAdvence

* Add the function getOutput

* Clean for the ci

* update the doc

* Change the name to add logic

* refactor the doc

* Refactor the paraview plugin

* clean for ci

* clean the doc

* fix the ci

* Update the workflow plugins using the filter

* fix the test

* fix the ci

* Add the new folder geos-processing

* move GeomechanicsCalculators to geos-processing

* Apply suggestions from Paloma's review

Co-authored-by: paloma-martinez <104762252+paloma-martinez@users.noreply.github.com>

* Keep the old way to load the file, this update is for another pr

* fix the ci

* Factorize the checkMandatoryAttributesFunction and add docs

* update import

* fix Install packages

* fix ci

* fix geos-post build

* Apply Jacques suggestion with dataclass

* update dataclass

* fix ruff

* update the doc

* Apply suggestions from Paloma's review

Co-authored-by: paloma-martinez <104762252+paloma-martinez@users.noreply.github.com>

* Fix dataclass default value

---------

Co-authored-by: paloma-martinez <104762252+paloma-martinez@users.noreply.github.com>

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -61,6 +61,7 @@ jobs:
           - geos-geomechanics
           - geos-mesh
           - geos-posp
+          - geos-processing
           - geos-timehistory
           - geos-trame
           - geos-xml-tools
@@ -72,8 +73,10 @@ jobs:
             dependencies: "geos-utils"
           - package-name: geos-mesh
             dependencies: "geos-utils geos-geomechanics"
-          - package-name: geos-posp
+          - package-name: geos-processing
             dependencies: "geos-utils geos-mesh geos-geomechanics"
+          - package-name: geos-posp
+            dependencies: "geos-utils geos-mesh geos-geomechanics geos-processing"
           - package-name: pygeos-tools
             dependencies: "geos-utils geos-mesh"
           - package-name: geos-timehistory
