--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -96,7 +96,7 @@ jobs:
     - name: Install OSMesa
       run: |
         sudo apt-get update
-        sudo apt-get install -y libosmesa6-dev libgl1-mesa-glx libglu1-mesa xvfb
+        sudo apt-get install -y libosmesa6
 
     - name: Install package
       # working-directory: ./${{ matrix.package-name }}
