--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -93,16 +93,16 @@ jobs:
         python-version: ${{ matrix.python-version }}
         cache: 'pip'
     
-    - name: Install OSMesa and GL
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y libosmesa6      
-        sudo apt-get install -y \
-            libegl1-mesa-dev \
-            libgles2-mesa-dev \
-            libgl1-mesa-dev \
-            libx11-dev \
-            libxext-dev
+    # - name: Install OSMesa and GL
+    #   run: |
+    #     sudo apt-get update
+    #     sudo apt-get install -y libosmesa6      
+    #     sudo apt-get install -y \
+    #         libegl1-mesa-dev \
+    #         libgles2-mesa-dev \
+    #         libgl1-mesa-dev \
+    #         libx11-dev \
+    #         libxext-dev
 
     - name: Install package
       # working-directory: ./${{ matrix.package-name }}
@@ -126,8 +126,6 @@ jobs:
       run: |
         yapf -r --diff ./${{ matrix.package-name }} --style .style.yapf
     - name: Test with pytest
-      env:
-          PYVISTA_OFF_SCREEN: true
       #working-directory: ./${{ matrix.package-name }}
       run:
       # python -m pytest ./${{ matrix.package-name }} --doctest-modules --junitxml=junit/test-results.xml --cov-report=xml --cov-report=html |
