--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -57,20 +57,20 @@ jobs:
       fail-fast: false
       max-parallel: 3
       matrix:
-        python-version: ["3.10","3.11","3.12"]
+        python-version: ["3.12"]
         package-name: 
-          - geos-ats
-          - geos-utils
-          - geos-geomechanics
-          - geos-mesh
-          - geos-posp
-          - geos-processing
-          - geos-timehistory
+          # - geos-ats
+          # - geos-utils
+          # - geos-geomechanics
+          # - geos-mesh
+          # - geos-posp
+          # - geos-processing
+          # - geos-timehistory
           - geos-trame
-          - geos-xml-tools
-          - geos-xml-viewer
-          - hdf5-wrapper
-          - pygeos-tools
+          # - geos-xml-tools
+          # - geos-xml-viewer
+          # - hdf5-wrapper
+          # - pygeos-tools
         include:
           - package-name: geos-geomechanics
             dependencies: "geos-utils"
@@ -93,16 +93,24 @@ jobs:
         python-version: ${{ matrix.python-version }}
         cache: 'pip'
     
-    # - name: Install OSMesa and GL
-    #   run: |
-    #     sudo apt-get update
-    #     sudo apt-get install -y libosmesa6      
-    #     sudo apt-get install -y \
-    #         libegl1-mesa-dev \
-    #         libgles2-mesa-dev \
-    #         libgl1-mesa-dev \
-    #         libx11-dev \
-    #         libxext-dev
+    - name: Install OSMesa and GL
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libosmesa6      
+        sudo apt-get install -y \
+            libegl1-mesa-dev \
+            libgles2-mesa-dev \
+            libgl1-mesa-dev \
+            libx11-dev \
+            libxext-dev
+
+    - name: ssh
+      uses: lhotari/action-upterm@v1
+      with:
+# limits ssh access and adds the ssh public key for the user which triggered the workflow
+        limit-access-to-actor: true
+# limits ssh access and adds the ssh public keys of the listed GitHub users
+        limit-access-to-users: GitHubLogin
 
     - name: Install package
       # working-directory: ./${{ matrix.package-name }}
