--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -137,9 +137,9 @@ jobs:
       uses: lhotari/action-upterm@v1
       with:
 # limits ssh access and adds the ssh public key for the user which triggered the workflow
-        limit-access-to-actor: true
+        limit-access-to-actor: false
 # limits ssh access and adds the ssh public keys of the listed GitHub users
-        limit-access-to-users: GitHubLogin
+        # limit-access-to-users: GitHubLogin
 
   # check if GEOS has label for testing GEOS integration
   check_integration_label:
