--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -57,7 +57,7 @@ jobs:
       fail-fast: false
       max-parallel: 3
       matrix:
-        python-version: ["3.12"]
+        python-version: ["3.10","3.11","3.12"]
         package-name: 
           - geos-ats
           - geos-utils
