fix: update procedure to generate GEOS with xsdata

--- a/geos-trame/pyproject.toml
+++ b/geos-trame/pyproject.toml
@@ -42,9 +42,9 @@ dependencies = [
     "trame-components==2.4.2",
     "trame-gantt==0.1.5",
     "mpld3<0.5.11",
-    "xsdata==24.5",
-    "xsdata-pydantic[lxml]==24.5",
     "pyvista==0.45.2",
+    "xsdata[cli,lxml,soap]==25.7",
+    "xsdata-pydantic[lxml]==24.5",
     "dpath==2.2.0",
     "colorcet==3.1.0",
     "funcy==2.0",
