--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -68,6 +68,7 @@ jobs:
           - geos-trame
           - geos-xml-tools
           - geos-xml-viewer
+          - mesh-doctor
           - hdf5-wrapper
           - pygeos-tools
         include:
@@ -77,6 +78,8 @@ jobs:
             dependencies: "geos-utils geos-geomechanics"
           - package-name: geos-processing
             dependencies: "geos-utils geos-mesh geos-geomechanics"
+          - package-name: mesh-doctor
+            dependencies: "geos-utils geos-mesh"
           - package-name: pygeos-tools
             dependencies: "geos-utils geos-mesh"
           - package-name: geos-timehistory
@@ -201,6 +204,7 @@ jobs:
           "geos-mesh"
           "geos-xml-tools"
           "hdf5-wrapper"
+          "mesh-doctor"
           "pygeos-tools"
           "geos-ats"
         )
