--- a/geos-utils/pyproject.toml
+++ b/geos-utils/pyproject.toml
@@ -17,7 +17,9 @@ description = "geos-utils is a Python package that gathers utilities common to a
 authors = [{name = "GEOS Contributors" }]
 maintainers = [{name = "Alexandre Benedicto", email = "alexandre.benedicto@external.totalenergies.com" },
                {name = "Romain Baville", email = "romain.baville@external.totalenergies.com" },
-               {name = "Paloma Martinez", email = "paloma.martinez@external.totalenergies.com" }]
+               {name = "Paloma Martinez", email = "paloma.martinez@external.totalenergies.com" },
+               {name = "Jacques Franc", email = "jacques.franc@external.totalenergies.com" },
+               ]
 license = {text = "Apache-2.0"}
 classifiers = [
   "Development Status :: 4 - Beta",
