--- a/geos-trame/pyproject.toml
+++ b/geos-trame/pyproject.toml
@@ -32,12 +32,12 @@ keywords = [
 dependencies = [
     "typing-extensions==4.12.2",
     "trame==3.6.5",
-    "trame-vuetify==2.7.1",
+    "trame-vuetify==3.1.0",
     "trame-code==1.0.1",
     "trame-server==3.2.3",
-    "trame-client==3.5.0",
+    "trame-client==3.11.2",
     "trame-simput==2.4.3",
-    "trame-vtk>=2.8.14",
+    "trame-vtk==2.10.0",
     "matplotlib==3.9.4",
     "trame-matplotlib==2.0.3",
     "trame-components==2.4.2",
