--- a/geos-mesh/pyproject.toml
+++ b/geos-mesh/pyproject.toml
@@ -40,7 +40,7 @@ dependencies = [
 
 [project.scripts]
     convert_abaqus = "geos.mesh.conversion.main:main"
-    
+
 [project.urls]
 Homepage = "https://github.com/GEOS-DEV/geosPythonPackages"
 Documentation = "https://geosx-geosx.readthedocs-hosted.com/projects/geosx-geospythonpackages/en/latest/"
@@ -53,11 +53,11 @@ build = [
 ]
 dev = [
    "mypy",
-   "ruff", 
+   "ruff",
    "yapf",
 ]
 test = [
-   "pytest-cov", 
+   "pytest-cov",
    "pytest"
 ]
 
@@ -71,3 +71,13 @@ python_functions = "test*"
 testpaths = ["tests"]
 norecursedirs = "bin"
 filterwarnings = []
+
+
+# [tool.coverage.run]
+# branch = true
+# source = [""]
+# omit = ["tests/*"]
+# where = ["src"]
+# include = ["geos.mesh*"]
+# exclude = ['tests*']
+# source = ["PVplugins, filters, processing, readers, utils, visu, writers, pyvistaTools, bin"]
