--- a/geos-trame/pyproject.toml
+++ b/geos-trame/pyproject.toml
@@ -49,6 +49,7 @@ dependencies = [
     "dpath==2.2.0",
     "colorcet==3.1.0",
     "funcy==2.0",
+    "pytz==2025.2",
     "typing_inspect==0.9.0",
     "typing_extensions>=4.12",
     "PyYAML",
