--- a/geos-trame/pyproject.toml
+++ b/geos-trame/pyproject.toml
@@ -50,6 +50,7 @@ dependencies = [
     "colorcet==3.1.0",
     "funcy==2.0",
     "pytz==2025.2",
+    "types-pytz==2025.2.0.20251108",
     "typing_inspect==0.9.0",
     "typing_extensions>=4.12",
     "PyYAML",
