discar all but ProblemType

--- a/geos-trame/pyproject.toml
+++ b/geos-trame/pyproject.toml
@@ -42,8 +42,8 @@ dependencies = [
     "trame-components==2.4.2",
     "trame-gantt==0.1.5",
     "mpld3<0.5.11",
-    "xsdata[cli]>24.5",
-    "xsdata-pydantic[lxml]==24.5",
+    "xsdata[cli]>=25.4",
+    "xsdata-pydantic[lxml]==25.4",
     "pyvista==0.45.2",
     "dpath==2.2.0",
     "colorcet==3.1.0",
