--- a/.github/workflows/typing-check.yml
+++ b/.github/workflows/typing-check.yml
@@ -30,7 +30,7 @@ jobs:
       # working-directory: ./${{ matrix.package-name }}
       run: |
         python -m pip install --upgrade pip
-        python -m pip install mypy ruff types-PyYAML
+        python -m pip install mypy ruff types-PyYAML types-requests
 
     - name: Typing check with mypy
       #  working-directory: ./${{ matrix.package-name }}
