--- a/geos-trame/pyproject.toml
+++ b/geos-trame/pyproject.toml
@@ -42,6 +42,7 @@ dependencies = [
     "trame-matplotlib==2.0.3",
     "trame-components==2.4.2",
     "trame-gantt==0.1.5",
+    "python-dotenv>=1.2.1",
     "mpld3<0.5.11",
     "xsdata==24.5",
     "xsdata-pydantic[lxml]==24.5",
