--- a/geos-trame/pyproject.toml
+++ b/geos-trame/pyproject.toml
@@ -42,7 +42,7 @@ dependencies = [
     "trame-matplotlib==2.0.3",
     "trame-components==2.4.2",
     "mpld3<0.5.11",
-    "xsdata==24.5",
+    "xsdata[cli]>=25.4",
     "xsdata-pydantic[lxml]==24.5",
     "pyvista==0.45.2",
     "dpath==2.2.0",
