--- a/geos-mesh/pyproject.toml
+++ b/geos-mesh/pyproject.toml
@@ -28,7 +28,7 @@ classifiers = [
 requires-python = ">=3.10"
 
 dependencies = [
-    "vtk >= 9.3",
+    "vtk >= 9.3, < 9.6",
     "networkx >= 2.4",
     "tqdm >= 4.67",
     "numpy >= 2.2",
