--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -57,7 +57,7 @@ jobs:
       fail-fast: false
       max-parallel: 3
       matrix:
-        python-version: ["3.10","3.11","3.12"]
+        python-version: ["3.12"]
         package-name:
           - geos-ats
           - geos-utils
@@ -108,7 +108,9 @@ jobs:
       # working-directory: ./${{ matrix.package-name }}
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pytest yapf toml "pytest-html>=4.0.0"
+        # Install setuptools first to provide pkg_resources for older plugins
+        python -m pip install setuptools
+        python -m pip install pytest yapf toml pytest-html
 
         DEPS="${{ matrix.dependencies || '' }}"
 
