--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -59,18 +59,18 @@ jobs:
       matrix:
         python-version: ["3.12"]
         package-name:
-          - geos-ats
-          - geos-utils
-          - geos-geomechanics
-          - geos-mesh
-          - geos-processing
-          - geos-timehistory
+          # - geos-ats
+          # - geos-utils
+          # - geos-geomechanics
+          # - geos-mesh
+          # - geos-processing
+          # - geos-timehistory
           - geos-trame
-          - geos-xml-tools
-          - geos-xml-viewer
-          - mesh-doctor
-          - hdf5-wrapper
-          - pygeos-tools
+          # - geos-xml-tools
+          # - geos-xml-viewer
+          # - mesh-doctor
+          # - hdf5-wrapper
+          # - pygeos-tools
         include:
           - package-name: geos-geomechanics
             dependencies: "geos-utils"
@@ -108,9 +108,7 @@ jobs:
       # working-directory: ./${{ matrix.package-name }}
       run: |
         python -m pip install --upgrade pip
-        # Install setuptools first to provide pkg_resources for older plugins
-        python -m pip install setuptools
-        python -m pip install pytest yapf toml pytest-html
+
 
         DEPS="${{ matrix.dependencies || '' }}"
 
@@ -123,6 +121,10 @@ jobs:
 
         echo "Installing main package..."
         python -m pip install ./${{ matrix.package-name }}/[test]
+        # LWS Install setuptools first to provide pkg_resources for older plugins
+        python -m pip install setuptools
+        python -m pip install "pytest>=8.0.0" yapf toml "pytest-html>=4.0.0"
+        
     - name: Lint with yapf
       # working-directory: ./${{ matrix.package-name }}
       run: |
