--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -57,20 +57,20 @@ jobs:
       fail-fast: false
       max-parallel: 3
       matrix:
-        python-version: ["3.12"]
+        python-version: ["3.10","3.11","3.12"]
         package-name:
-          # - geos-ats
-          # - geos-utils
-          # - geos-geomechanics
-          # - geos-mesh
-          # - geos-processing
-          # - geos-timehistory
+          - geos-ats
+          - geos-utils
+          - geos-geomechanics
+          - geos-mesh
+          - geos-processing
+          - geos-timehistory
           - geos-trame
-          # - geos-xml-tools
-          # - geos-xml-viewer
-          # - mesh-doctor
-          # - hdf5-wrapper
-          # - pygeos-tools
+          - geos-xml-tools
+          - geos-xml-viewer
+          - mesh-doctor
+          - hdf5-wrapper
+          - pygeos-tools
         include:
           - package-name: geos-geomechanics
             dependencies: "geos-utils"
