fix: limite vtk version to 9.5 (#227)
* limite vtk version to 9.5

* Add setuptools to project dependencies

* Add setuptools to requirements.txt

* Last call added setuptools installation to settle selenium-base pytest conflict

* Update python-package.yml

---------

Co-authored-by: Jacques Franc <49998870+jafranc@users.noreply.github.com>

--- a/geos-processing/pyproject.toml
+++ b/geos-processing/pyproject.toml
@@ -32,7 +32,7 @@ dependencies = [
     "geos-geomechanics",
     "geos-utils",
     "geos-mesh",
-    "vtk >= 9.3",
+    "vtk >= 9.3, < 9.6",
     "numpy >= 2.2",
     "typing_extensions >= 4.12",
 ]
@@ -43,6 +43,7 @@ Homepage = "https://github.com/GEOS-DEV/geosPythonPackages"
 Documentation = "https://geosx-geosx.readthedocs-hosted.com/projects/geosx-geospythonpackages/en/latest/"
 Repository = "https://github.com/GEOS-DEV/geosPythonPackages.git"
 "Bug Tracker" = "https://github.com/GEOS-DEV/geosPythonPackages/issues"
+
 
 [project.optional-dependencies]
 build = [
