--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -108,7 +108,7 @@ jobs:
       # working-directory: ./${{ matrix.package-name }}
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pytest yapf toml
+
 
         DEPS="${{ matrix.dependencies || '' }}"
 
@@ -121,6 +121,10 @@ jobs:
 
         echo "Installing main package..."
         python -m pip install ./${{ matrix.package-name }}/[test]
+        # LWS Install setuptools first to provide pkg_resources for older plugins
+        python -m pip install setuptools
+        python -m pip install "pytest>=8.0.0" yapf toml "pytest-html>=4.0.0"
+        
     - name: Lint with yapf
       # working-directory: ./${{ matrix.package-name }}
       run: |
